--- a/Class_Reg.html
+++ b/Class_Reg.html
@@ -50,7 +50,7 @@ hr {
 <body>  
 <form>  
   <div class="container">  
-  <center>  <h1> Student Registeration</h1> </center>  
+  <center>  <h1> Student Registration</h1> </center>  
   <hr>  
   <label> Firstname </label>   
 <input type="text" name="firstname" placeholder= "Firstname" size="15" required />   
@@ -64,12 +64,8 @@ Course :
   
 <select>  
 <option value="Course">Course</option>  
-<option value="BCA">BCA</option>  
-<option value="BBA">BBA</option>  
-<option value="B.Tech">B.Tech</option>  
-<option value="MBA">MBA</option>  
-<option value="MCA">MCA</option>  
-<option value="M.Tech">M.Tech</option>  
+<option value="BSCS">BSCS</option>  
+<option value="MSCS">MSCS</option>  
 </select>  
 </div>  
 <div>  
