--- a/Class_Reg.html
+++ b/Class_Reg.html
@@ -65,7 +65,8 @@ Course :
 <select>  
 <option value="Course">Course</option>  
 <option value="BSCS">BSCS</option>  
-<option value="MSCS">MSCS</option>  
+<option value="MSCS">MSCS</option> 
+<option value="BSCE">BSCE</option>   
 </select>  
 </div>  
 <div>  
