edit class_sel columns

--- a/Class_Sel.html
+++ b/Class_Sel.html
@@ -39,18 +39,16 @@
     <div class="column columns">
 
 
-
-
-
         <form>
-
 
             <h2>Product 1</h2>
 
             <div class="row" style="text-align: center; >
 
                 <div class="medium-6 columns" >
-                    <select
+                    <select 
+					
+						style="height: 50px; width: 500px;"
 					   
                         name="category"
                         class="cascadingDropDown "
