fixed php location script

--- a/sign_up.html
+++ b/sign_up.html
@@ -96,7 +96,7 @@
     </header>
 
     <fieldset>
-    <form method="post" action="sign_up.php">  
+    <form method="post" action="php_scripts/sign_up.php">  
         <div class="container">  
             <!-- <center>  <h1 style="padding:20px"> Sign-Up</h1> </center>   -->
             <!-- <hr>   -->
