--- a/sign_up.html
+++ b/sign_up.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>  
 <html>  
     <head>  
+        <title>Sign Up</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">  
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <style>
@@ -95,7 +96,6 @@
         <!-- <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button> -->
     </header>
 
-    <fieldset>
     <form method="post" action="php_scripts/sign_up.php">  
         <div class="container">  
             <!-- <center>  <h1 style="padding:20px"> Sign-Up</h1> </center>   -->
@@ -114,7 +114,7 @@
 
             <div>
                 <label for="email"><b>Email</b></label>  
-                <input type="text" placeholder="Enter Email" name="email" required>
+                <input type="email" placeholder="Enter Email" name="email" required>
             </div>
 
             <div>  
@@ -132,7 +132,6 @@
             <button type="submit" class="registerbtn">Continue</button>
         </div>  
     </form> 
-    </fieldset>
     
     </body>  
 </html>  
