--- a/Class_Reg.html
+++ b/Class_Reg.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>  
 <html>  
 <head>  
-<meta name="viewport" content="width=device-width, initial-scale=1">  
+        <title>Course Registration</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">  
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="mycss.css" rel="stylesheet">
+
+        <!-- Fonts -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <style>
 
 body{  
-  font-family: Calibri, Helvetica, sans-serif;  
+  /* font-family: Calibri, Helvetica, sans-serif;   */
   background-color: rgb(41, 38, 25);  
 }  
 .container {  
@@ -48,6 +55,35 @@ hr {
 </style>  
 </head>  
 <body>  
+    <!-- Navbar -->
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg nav-pills" style="background-color:black !important">
+        <span class="navbar-brand mb-0 h1" style="color:rgb(231, 200, 25)"><strong>ProViso Online Advising</strong></span>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="navbar-nav">
+                <a href="index.html" class="nav-item nav-link my-nav-item">Home</a>
+                <a href="degree_overview.html" class="nav-item  nav-link my-nav-item">Degree Overview</a>
+                <a href="career.html" class="nav-item nav-link my-nav-item">Career Overview</a>
+
+                <a href= Class_Reg.html class="nav-item active nav-link my-nav-item" >Course Register</a>
+                <a href="#" class="nav-item nav-link my-nav-item disabled">Course Mapper</a>
+                <a href="#" class="nav-item nav-link my-nav-item disabled">Course outcomes</a>
+                <a href="sign_up.html" class="nav-item nav-link my-nav-item">Register</a>
+            </div>
+        </div>
+
+        <div style="color:white">
+            logout goes here
+        </div>
+    </nav>
+
+    <div style="background-color: rgb(39, 39, 39); color:white; padding: 10px;">
+        Hello $first_name.
+    </div>
     
 <form>  
   <div class="container">  
