--- a/career.html
+++ b/career.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="mycss.css" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,25 +21,33 @@
 <body>
 
 <!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-cyan w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-light-gray w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Home</a>
-    <a href= Class_Reg.html class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray" >Course Register</a>
-    <a href="career.html" class="w3-bar-item w3-button w3-padding-large w3-light-gray">Career</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Degree</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Course Mapper</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Course outcomes</a>
-    <a href="sign_up.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Sign Up</a>
-</div>
+<nav class="navbar navbar-dark bg-dark navbar-expand-lg nav-pills" style="background-color:black !important">
+  <span class="navbar-brand mb-0 h1" style="color:rgb(231, 200, 25)"><strong>ProViso Online Advising</strong></span>
 
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Careers</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Degree</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Course Mapper</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Course outcomes</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  
+  <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="navbar-nav">
+          <a href="index.html" class="nav-item nav-link my-nav-item">Home</a>
+          <a href="degree_overview.html" class="nav-item  nav-link my-nav-item">Degree Overview</a>
+          <a href="career.html" class="active nav-item nav-link my-nav-item">Career Overview</a>
+
+          <a href= Class_Reg.html class="nav-item nav-link my-nav-item" >Course Register</a>
+          <a href="#" class="nav-item nav-link my-nav-item disabled">Course Mapper</a>
+          <a href="#" class="nav-item nav-link my-nav-item disabled">Course outcomes</a>
+          <a href="sign_up.html" class="nav-item nav-link my-nav-item">Register</a>
+      </div>
   </div>
+
+  <div style="color:white">
+      logout goes here
+  </div>
+</nav>
+
+<div style="background-color: rgb(39, 39, 39); color:white; padding: 10px;">
+  Hello $first_name.
 </div>
 
 <!-- Header -->
