--- a/sign_up_success.html
+++ b/sign_up_success.html
@@ -4,6 +4,8 @@
         <title>Success</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">  
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="mycss.css" rel="stylesheet">
         <style>
             body{  
                 font-family: Calibri, Helvetica, sans-serif;  
@@ -56,29 +58,35 @@
     </head>  
 
     <body>  
+        <!-- Navbar -->
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg nav-pills" style="background-color:black !important">
+            <span class="navbar-brand mb-0 h1" style="color:rgb(231, 200, 25)"><strong>ProViso Online Advising</strong></span>
 
-        <!-- fix nav bar style -->
-    <!-- Navbar -->
-    <div class="w3-top">
-        <div class="w3-bar w3-cyan w3-card w3-left-align w3-large" style="background-color: black !important; color: white !important">
-            <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-light-gray w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-            <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Home</a>
-            <a href= Class_Reg.html class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray" >Course Register</a>
-            <a href="career.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Career</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Degree</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Course Mapper</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Course outcomes</a>
-            <a href="sign_up.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Sign Up</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="navbar-nav">
+                    <a href="index.html" class="nav-item nav-link my-nav-item">Home</a>
+                    <a href="degree_overview.html" class="active nav-item  nav-link my-nav-item">Degree Overview</a>
+                    <a href="career.html" class="nav-item nav-link my-nav-item">Career Overview</a>
+
+                    <a href= Class_Reg.html class="nav-item nav-link my-nav-item" >Course Register</a>
+                    <a href="#" class="nav-item nav-link my-nav-item disabled">Course Mapper</a>
+                    <a href="#" class="nav-item nav-link my-nav-item disabled">Course outcomes</a>
+                    <a href="sign_up.html" class="nav-item nav-link my-nav-item">Register</a>
+                </div>
+            </div>
+
+            <div style="color:white">
+                logout goes here
+            </div>
+        </nav>
+
+        <div style="background-color: rgb(39, 39, 39); color:white; padding: 10px;">
+            Hello $first_name.
         </div>
-  
-        <!-- Navbar on small screens -->
-        <!-- <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">Careers</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">Degree</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">Course Mapper</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">Course outcomes</a>
-        </div> -->
-    </div>
 
     <!-- /* find out how to put lower on page */ -->
     <!-- <div><center><h1>User Sign-Up</h1></center></div> -->
@@ -86,7 +94,13 @@
     <header class="w3-container w3-cyan w3-center" style="padding:128px 16px; background-color: rgb(231, 200, 25) !important">
         <h1 class="w3-margin w3-jumbo">Success!</h1>
         <p class="w3-large">
-            You have successfully signed up for the proviso online advising system! You should be redirected in a few minutes...
+            You have successfully signed up for the proviso online advising system!
+        </p>
+
+        <p class="w3-large">
+            Click 
+            <a href="index.html" class="link">here</a>
+             to go to the dashboard.
         </p>
     </header>
     
