updated look of page to match other pages

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
     .fa-anchor,.fa-coffee {font-size:200px}
+    body {
+      background-color: white;
+    }
   </style>
 </head>
 
@@ -36,7 +39,7 @@
             <a href="degree_overview.html" class="nav-item nav-link my-nav-item">Degree Overview</a>
             <a href="career.html" class="nav-item nav-link my-nav-item">Career Overview</a>
 
-            <a href= Class_Reg.html class="nav-item nav-link my-nav-item" >Course Register</a>
+            <a href= Class_Reg.php class="nav-item nav-link my-nav-item" >Course Register</a>
             <a href="#" class="nav-item nav-link my-nav-item disabled">Course Mapper</a>
             <a href="#" class="nav-item nav-link my-nav-item disabled">Course outcomes</a>
             <a href="sign_up.html" class="nav-item nav-link my-nav-item">Register</a>
@@ -52,36 +55,14 @@
     Hello $first_name.
 </div>
 
-<!-- Navbar -->
-<!-- <div class="w3-bar w3-cyan w3-card w3-left-align w3-large">
-  <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-light-gray w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-  <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-light-gray">Home</a>
-  <a href= Class_Reg.html class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray" >Course Register</a>
-  <a href="career.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Career</a>
-  <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Degree</a>
-  <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Course Mapper</a>
-  <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Course outcomes</a>
-  <a href="sign_up.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-light-gray">Sign Up</a>
-</div>
-
-  Navbar on small screens
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Careers</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Degree</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Course Mapper</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Course outcomes</a>
-  </div>
-</div> -->
-
 <!-- Header -->
-<header class="w3-container w3-cyan w3-center" style="padding:128px 16px">
+<header class="w3-container w3-cyan w3-center" style="padding:128px 16px; background-color:rgb(231, 200, 25) !important">
   <h1 class="w3-margin w3-jumbo">Dashboard</h1>
   <p class="w3-xlarge">Student</p>
   <p class="w3-large">
     Jane Doe <br>
     Sophomore
   </p>
-  <!-- <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button> -->
 </header>
 
 <!-- First Grid -->
