--- a/sign_up_success.html
+++ b/sign_up_success.html
@@ -72,7 +72,7 @@
                     <a href="degree_overview.html" class="active nav-item  nav-link my-nav-item">Degree Overview</a>
                     <a href="career.html" class="nav-item nav-link my-nav-item">Career Overview</a>
 
-                    <a href= Class_Reg.html class="nav-item nav-link my-nav-item" >Course Register</a>
+                    <a href= Class_Reg.php class="nav-item nav-link my-nav-item" >Course Register</a>
                     <a href="#" class="nav-item nav-link my-nav-item disabled">Course Mapper</a>
                     <a href="#" class="nav-item nav-link my-nav-item disabled">Course outcomes</a>
                     <a href="sign_up.html" class="nav-item nav-link my-nav-item">Register</a>
