change name, fix logout

--- a/index.html
+++ b/index.html
@@ -43,20 +43,18 @@
             <a href="#" class="nav-item nav-link my-nav-item disabled">Course Mapper</a>
             <a href="#" class="nav-item nav-link my-nav-item disabled">Course outcomes</a>
             <a href="sign_up.html" class="nav-item nav-link my-nav-item">Register</a>
+			 <a href="#" class="nav-item nav-link my-nav-item">Logout</a>
         </div>
     </div>
 
-    <div style="color:white">
-        logout goes here
-    </div>
   </nav>
 
 <div style="background-color: rgb(39, 39, 39); color:white; padding: 10px;">
-    Hello $first_name.
+    Hello John Doe
 </div>
 
 <!-- Header -->
-<header class="w3-container w3-cyan w3-center" style="padding:128px 16px; background-color:rgb(231, 200, 25) !important">
+<header class="w3-container w3-cyan w3-center" style="padding:128px 16px; background-image: url(''); !important">
   <h1 class="w3-margin w3-jumbo">Dashboard</h1>
   <p class="w3-xlarge">Student</p>
   <p class="w3-large">
