--- a/sign_up_success.html
+++ b/sign_up_success.html
@@ -76,12 +76,11 @@
                     <a href="#" class="nav-item nav-link my-nav-item disabled">Course Mapper</a>
                     <a href="#" class="nav-item nav-link my-nav-item disabled">Course outcomes</a>
                     <a href="sign_up.html" class="nav-item nav-link my-nav-item">Register</a>
+					 <a href="#" class="nav-item nav-link my-nav-item">Logout</a>
                 </div>
             </div>
 
-            <div style="color:white">
-                logout goes here
-            </div>
+            
         </nav>
 
         <div style="background-color: rgb(39, 39, 39); color:white; padding: 10px;">
