--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
     body {
       background-color: white;
     }
+	header{
+
+        width: 100%;
+        height: 50%;
+        padding: 0 0 50%;
+        border: 1px solid;
+        background-size: 50%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-left: auto;
+        margin-right: auto;
+     }
+
+	
   </style>
 </head>
 
@@ -53,12 +67,13 @@
     Hello John Doe
 </div>
 
-<!-- Header -->
-<header class="w3-container w3-cyan w3-center" style="padding:128px 16px; background-image: url(''); !important">
-  <h1 class="w3-margin w3-jumbo">Dashboard</h1>
-  <p class="w3-xlarge">Student</p>
-  <p class="w3-large">
-    Jane Doe <br>
+<!-- Header <img class="center-fit" src="img/notebook.jpg" >-->
+<header class="w3-container w3-cyan w3-center " style="padding:128px 16px; background-image: url('img/ccc.jpg')  !important">
+
+  <h1 class="w3-margin w3-jumbo" style="color:white">Dashboard</h1>
+  <p style="color:white" class="w3-xlarge">Student</p>
+  <p style="color:white" class="w3-large">
+    John Doe <br>
     Sophomore
   </p>
 </header>
