--- a/career.html
+++ b/career.html
@@ -67,5 +67,9 @@
         <div class="container-fluid" style="width: 80%">
             Courses Recommended based on skills needed: $recommendations
         </div>
+		
+		  <div class="container-fluid" style="width: 80%">
+            Personal References
+        </div>
     </body>
 </html>
